# vk_algorithms

module_1/: CMakeLists.txt  dynamic_array.cpp  main.cpp  task_1_4.cpp  task_2_1.cpp  task_3_1.cpp  task_4_1.cpp
module_1/include/: DynamicArray.hpp  Heap.hpp  MinMax.hpp  Pair.hpp  Queue.hpp
module_1/src/: task_1_4.cpp  task_2_1.cpp  task_3_1.cpp  task_4_1.cpp  task_5_3.cpp  task_6_2.cpp  task_7_2.cpp
module_2/: CMakeLists.txt  main.cpp
module_2/include/: AVLTree.hpp  BTree.hpp  BinaryTree.hpp  HashTable.hpp
module_2/src/: task_1_2.cpp  task_2_1.cpp  task_3.cpp  task_4_2.cpp
module_3/GraphTask/: CMakeLists.txt  main.cpp
module_3/GraphTask/include/: ArcGraph.hpp  IGraph.hpp  ListGraph.hpp  MatrixGraph.hpp  SetGraph.hpp
module_3/GraphTask/src/: ArcGraph.cpp  ListGraph.cpp  MatrixGraph.cpp  SetGraph.cpp
module_3/contest/: main.cpp  xddd.cpp
module_3/contest/include/: ListGraph.hpp  ListGraphDijkstra.hpp
module_3/contest/src/: task_2.cpp  task_3.cpp
